# rf_type

./: Cargo.toml  README.md  TODO.md
src/: lib.rs
src/donation/: mod.rs
src/endpoint/flintstone/: mod.rs  request.rs  response.rs
src/endpoint/markov/: mod.rs  response.rs
src/endpoint/process_new_donation/: mod.rs  response.rs
src/endpoint/random_oblique/: request.rs  response.rs
src/error/: error.rs  mod.rs
src/flintstone/: mod.rs  request.rs  response.rs
src/http/: flintstone.rs  header.rs  method.rs  mod.rs  payload.rs  request.rs  response.rs  url.rs
src/http/endpoint/: mod.rs
src/http/endpoint/donation/: mod.rs  request.rs  response.rs
src/http/endpoint/flintstone/: mod.rs  request.rs  response.rs
src/http/endpoint/log_donations/: mod.rs  request.rs  response.rs
src/http/endpoint/markov/: mod.rs  request.rs  response.rs
src/http/process_new_donation/: mod.rs  request.rs  response.rs
src/markov/: mod.rs  request.rs  response.rs
src/misc/: constant.rs
src/types/: mod.rs
src/types/donation/: donation.rs  mod.rs
src/types/manifest/: entry.rs  mod.rs
src/types/secret_alert/: entry.rs  manager.rs  media.rs  mod.rs  trigger.rs
src/types/subscription/: mod.rs  subscription.rs
src/types/tts/: mod.rs  option.rs
src/types/user/: mod.rs  user.rs
src/user/: user.rs
src/ws/: alert.rs  chat.rs  mod.rs  overlay_client_msg.rs  overlay_server_msg.rs
src/ws/client/: chat.rs  identify.rs  mod.rs  overlay_client_msg.rs  overlay_message.rs  overlay_msg.rs  role.rs  sub.rs
src/ws/server/: mod.rs  overlay_server_msg.rs  role.rs
(+10 files in other folders)
