[package]
name = "rf_type"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rand = { version = "0.9.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
