[package]
name = "rf_type"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
rand = { version = "0.9.1", features = ["serde"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
toml = "0.8.23"
tracing = "0.1.41"
twitch_api = { version = "0.7.2", features = ["eventsub"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
